Finished media breakpoints +resized image for breakpoints, this seems to align the rest of the content to match. +Fixed overflow of background stars - no more refresh issues.

--- a/main.css
+++ b/main.css
@@ -166,4 +166,7 @@ form {
         height: 35%;
         width: 35%;
     }
+    #crystalBall {
+        height: 1100px;
+    }
 }
